@@ -265,4 +265,10 @@
             id="org.netxms.ui.eclipse.console.LongTapHandlerScript">
       </resource>
    </extension>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="org.netxms.ui.eclipse.console.PreferenceInitializer">
+      </initializer>
+   </extension>
 </plugin>
