@@ -18,6 +18,7 @@
 	- Object context menu available on geo map
 	- Filter in event template configurator
 	- Web console use client time zone to display time
+	- Added option to use server time zone to display time in console
 - Fixed issues: #786, #831, #841, #852, #864, #890, #892, #896, #897, #900, #902, #905, #913, #919, #921, #928
 
 
